--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,3 +11,18 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-serif);
 }
+
+.router-link-active.links {
+    @apply text-brand-primary relative;
+}
+
+.router-link-active.links::before {
+    @apply absolute h-1 bottom-0 left-0 bg-brand-primary translate-y-1 rounded-lg;
+    content: '';
+    width: 0;
+    animation: slideIn 0.3s ease forwards;
+}
+
+@keyframes slideIn {
+    to { width: 100%; }
+}
