Finished mobile nav, made small touches to main nav and top header.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,10 @@ h1, h2, h3, h4, h5, h6 {
     animation: slideIn 0.3s ease forwards;
 }
 
+.router-link-active.mobile-links {
+    @apply bg-brand-primary/25;
+}
+
 @keyframes slideIn {
     to { width: 100%; }
 }
