--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,14 @@ h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-serif);
 }
 
+h2 {
+    @apply text-5xl font-extrabold
+}
+
+h3 {
+    @apply text-3xl font-extrabold
+}
+
 .router-link-active.links {
     @apply text-brand-primary relative;
 }
