--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,8 +12,12 @@ h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-serif);
 }
 
-h2 {
+h1 {
     @apply text-5xl font-extrabold
+}
+
+h2 {
+    @apply text-4xl font-extrabold;
 }
 
 h3 {
